# science-card-improvement

./: .env.example  .gitignore  .pre-commit-config.yaml  BASELINE_COMPARISON.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  README_ENHANCED.md  SETUP.md  docker-compose.yml  find_datasets.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: domain_tags.json  science_keywords.json
docs/: discovery_configuration.md
examples/bad_examples/: opengenome2_example.md
examples/good_examples/: tahoe_100m_example.md
output/proposals/: proposal_test_repo_20250919_170220.md
scripts/: discover_science_repos.py
src/: __init__.py
src/cli/: compare.py  discover.py  portal_discover.py
src/config/: settings.py
src/core/: baseline_analyzer.py  discovery.py  human_review.py  portal_integration.py
src/exceptions/: custom_exceptions.py
src/science_card_improvement/: __init__.py
src/science_card_improvement/analysis/: __init__.py  baseline.py
src/science_card_improvement/cli/: __init__.py  collaborate.py  compare.py  discover.py  portal_discover.py
src/science_card_improvement/config/: __init__.py  settings.py
src/science_card_improvement/discovery/: __init__.py  repository.py
src/science_card_improvement/exceptions/: __init__.py  custom_exceptions.py
src/science_card_improvement/portal/: __init__.py  integration.py  status.py
src/science_card_improvement/resources/: __init__.py
src/science_card_improvement/review/: __init__.py  human.py
src/science_card_improvement/utils/: __init__.py  cache.py  logger.py
src/science_card_improvement/validators/: __init__.py  input.py
src/utils/: cache.py  logger.py
src/validators/: input_validators.py
templates/: dataset_card_template.md
tests/: conftest.py
tests/unit/: test_discovery.py
